# prayer-room-schedule

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml
apps/client/: urls.py  views.py
apps/client/static/css/: materialize.min.css  style.css
apps/client/static/js/: scheduler.js  scheduler_presbiterio.js
apps/client/templates/: base.html  pdf_views.html  scheduler.html  scheduler_presbitery.html
apps/core/: models.py
apps/register/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/register/migrations/: 0001_initial.py  0002_alter_register_email_alter_register_leader_and_more.py
apps/register/templates/: base_register.html  register.html  register_sucess.html
apps/scheduler/: admin.py  api_views.py  models.py  serializer.py  urls.py
apps/scheduler/migrations/: 0001_initial.py  0002_scheduler_areas.py  0003_daysweekpresbytery_hoursdayspresbytery_and_more.py  0004_alter_schedulerpresbytery_days_week_and_more.py  0005_alter_scheduler_cellphone_alter_scheduler_email_and_more.py
config/: settings.py  urls.py
nginx/: nginx.conf
